<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/black_overlay"
    tools:context="com.example.msi.fastparking.Register">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_page"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/real_name"
        android:id="@+id/etRealname"
        android:layout_marginTop="60dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/prompt_user"
        android:id="@+id/etUsernameR"
        android:layout_marginTop="120dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/prompt_password"
        android:id="@+id/etPasswordR"
        android:layout_marginTop="180dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:id="@+id/etPasswordRC"
        android:layout_marginTop="240dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/register"
        android:background="@android:color/darker_gray"
        android:id="@+id/btRegisterR"
        android:layout_marginTop="300dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:id="@+id/LogInSwitch"
        android:textSize="18sp"
        android:text="@string/switch_login"
        android:gravity="end"
        android:layout_marginTop="350dp"/>


</RelativeLayout>
