<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.msi.fastparking.Manage_parking_slots">
    <TextView
        android:id="@+id/titleMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:text="@string/parking_slot_detail"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/position"
        android:id="@+id/titlePosition"
        android:layout_below="@+id/titleMain"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/fieldPosition"
        android:layout_below="@+id/titlePosition" />
    <TextView
        android:id="@+id/titleAvailability"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/availability"
        android:layout_below="@id/fieldPosition"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/fieldAvailability"
        android:layout_below="@+id/titleAvailability" />
    <TextView
        android:id="@+id/titleUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/using_by"
        android:layout_below="@id/fieldAvailability"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/fieldUser"
        android:layout_below="@+id/titleUser" />
    <TextView
        android:id="@+id/titleLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/slot_level"
        android:layout_below="@id/fieldUser"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/fieldLevel"
        android:layout_below="@+id/titleLevel" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_to_change_parking_slot_access_level"
        android:id="@+id/btCAL"
        android:layout_below="@+id/fieldLevel"/>
    <Button
        android:id="@+id/btBHP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_leaving"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
