<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.msi.fastparking.LogIn">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180sp"
        android:id="@+id/ivDefault_image"
        android:src="@drawable/loadingpage" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/prompt_user"
        android:id="@+id/etUsernameL"
        android:layout_marginTop="200dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/prompt_password"
        android:id="@+id/etPasswordL"
        android:layout_marginTop="260dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_log_in"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@android:color/holo_blue_bright"
        android:id="@+id/btlogIn"
        android:layout_marginTop="330dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in"
        android:id="@+id/btRegisterL"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>

